# ma2-onPC-MCP

./: .env.template  .gitignore  CLAUDE.md  Makefile  README.md  connect.sh  gma2_full_tree.txt  main.py  parse_log_tree.py  plugin.json  pyproject.toml  pytest.ini  scan_full_log.txt  scan_full_log2.txt  scan_full_log3.txt  scan_full_log4.txt  scan_output_abs.json  scan_output_d2.json  scan_output_d3.json  scan_output_d4.json  scan_output_v3.json  scan_tree.py  test_cd_behavior_output.json  test_list_format.py
.claude/: launch.json  settings.local.json
.claude/rules/: safety-rules.md  server-rules.md  skills-rules.md
.github/workflows/: test.yml
doc/: branch-evolution-audit.md  cd-tree-mcp-tool-correlation-matrix.md  command-builders.md  ma2-cd-tree-full.md  ma2-cd-tree_new.md  market-research-appendix.md  monetization-strategy-audit.md
ee/: README.md  context.md
rag/: __init__.py  config.py  ignore.py  types.py
rag/ingest/: __init__.py  chunk.py  crawl_repo.py  crawl_web.py  embed.py  extract.py  index.py
rag/retrieve/: __init__.py  query.py  rerank.py
rag/store/: __init__.py  schema.sql  sqlite.py
rag/utils/: __init__.py  hash.py  lang.py  text.py
scripts/: _append_ie_tests.py  condensed_tree.py  create_rgb_presets.py  print_cd_tree.py  rag_ingest.py  rag_ingest_web.py  rag_query.py  research_hierarchy.py  scan_tree.py  strategic_scan.py  test_keywords.py  validate_ft_channels.py
skills/: INDEX.md
skills/command-reference/: SKILL.md  context.md
src/: completions.py  elicitation.py  grandMA2_v3_9_telnet_keyword_vocabulary.json  navigation.py  prompt_parser.py  sampling.py  server.py  subscriptions.py  telnet_client.py  tools.py  vocab.py
tests/: conftest.py  test_agent_executor.py  test_agent_memory.py  test_agent_planner.py  test_agent_policy.py  test_agent_runtime.py  test_agent_state.py  test_agent_trace.py  test_agent_verification.py  test_agent_workflows.py  test_categorization.py  test_cd_behavior.py  test_cd_tree_validation.py  test_completions.py  test_crawl_web.py  test_deep_path.py  test_edit.py  test_elicitation.py  test_filter_library.py  test_importexport.py  test_info.py  test_live_integration.py  test_matricks.py  test_navigation.py  test_navigation_commands.py  test_new_builders.py  test_objects.py  test_prompt_parser.py  test_provenance.py  test_rag_chunk.py  test_rag_crawl.py  test_rag_embed.py  test_rag_extract.py  test_rag_fts5.py  test_rag_ignore.py  test_rag_query.py  test_rag_store.py  test_rag_types.py  test_regex.py  test_rerank.py  (+5 more)
vscode-mcp-provider/: README.md  package-lock.json  package.json  tsconfig.json
(+57 files in other folders)
