[project]
name = "gma2-mcp"
version = "0.1.0"
description = "MCP server for controlling grandMA2 lighting consoles via Telnet"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "romar" }]
keywords = ["grandma2", "mcp", "lighting", "telnet", "dmx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Networking",
]
dependencies = [
    "mcp>=1.21.0",
    "python-dotenv>=1.0.0",
    "telnetlib3>=2.0.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "mcp[cli]>=1.21.0",
]

[project.scripts]
gma2-mcp = "src.server:main"

[project.urls]
Repository = "https://github.com/thisis-romar/gma2-mcp-telnet"
Issues = "https://github.com/thisis-romar/gma2-mcp-telnet/issues"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
